--- a/style-main-improved.css
+++ b/style-main-improved.css
@@ -53,6 +53,9 @@ h6 {
     font-size: inherit;
     font-weight: inherit;
 }
+h2 {
+    text-align: center;
+}
 a {
     color: inherit;
     text-decoration: inherit;
@@ -360,6 +363,9 @@ video {
 }
 #webcrumbs .w-\[1200px\] {
     width: 100%;
+}
+#webcrumbs .w-\[20\%\] {
+    width: 20%;
 }
 #webcrumbs .w-\[30\%\] {
     width: 30%;
@@ -751,3 +757,31 @@ body {
     justify-content: center;
     background: linear-gradient(135deg, #ffffff, #d4d4d4);
 }
+
+/* ------------------ Custom styles ------------------- */
+
+.active {
+    color: white !important;
+    background-color: rgb(99 27 255 / var(--tw-bg-opacity)) !important;
+}
+
+/* .not_active {
+    color: rgb(55 65 81 / var(--tw-text-opacity));
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+} */
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    justify-content: center;
+}
+
+.flex-box {
+    display: flex;
+    flex-direction: row;
+}
+
+.button-margin {
+    margin: auto 8px;
+}
+
