--- a/css/style-main-improved.css
+++ b/css/style-main-improved.css
@@ -819,6 +819,7 @@ table td, table tr, table th {
     display: block;
     min-height: 24px;
     cursor: pointer;
+    word-break: normal;
 }
 
 span:focus {
@@ -876,4 +877,26 @@ thead tr, thead th, thead{
 
 .in-edit-mode {
     border-width: 1px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show-dropdown {
+    display: block;
 }
