fix: datepicker funct

--- a/css/style-main-improved.css
+++ b/css/style-main-improved.css
@@ -859,9 +859,9 @@ thead tr, thead th, thead{
     display: none;
 }
 
-/* #approved-wrapper {
+#approved-wrapper {
     display: none;
-} */
+}
 
 .text-sm-table {
     font-size: 12px;
