--- a/css/style-main-improved.css
+++ b/css/style-main-improved.css
@@ -959,3 +959,62 @@ thead tr, thead th, thead{
 .chosen-item button {
     margin: 0px 6px;
 }
+
+.dropdown-hid-col {
+    position: relative;
+    display: inline-block;
+}
+
+.drop-hid-col-btn {
+    padding: 8px 12px;
+    margin-left: 16px;
+    background-color: #0078d7;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.dropdown-content-hidden-col {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    padding: 10px;
+    z-index: 1;
+    min-width: 600px;
+    width: auto;
+    overflow-y: auto;
+    max-height: 400px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: opacity 0.3s ease;
+}
+
+.dropdown-content-hidden-col.show {
+    display: block;
+}
+
+.checkbox-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr); /* 6 equal columns */
+    gap: 10px;
+}
+
+.checkbox-grid label {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.dropdown-content-hidden-col label {
+    display: block;
+    margin-bottom: 6px;
+    cursor: pointer;
+}
+
+.dropdown-hid-col:hover .dropdown-content {
+    display: block;
+}
