--- a/css/style-main-improved.css
+++ b/css/style-main-improved.css
@@ -796,7 +796,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-#add-year-button-section {
+.add-button-section {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -986,7 +986,7 @@ thead tr, thead th, thead{
     min-width: 600px;
     width: auto;
     overflow-y: auto;
-    max-height: 400px;
+    max-height: 700px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: opacity 0.3s ease;
 }
@@ -1007,6 +1007,8 @@ thead tr, thead th, thead{
     gap: 6px;
     font-size: 14px;
     cursor: pointer;
+    border: 1px solid #e5e7eb;
+    padding: 2px; 
 }
 
 .dropdown-content-hidden-col label {
@@ -1017,4 +1019,43 @@ thead tr, thead th, thead{
 
 .dropdown-hid-col:hover .dropdown-content {
     display: block;
+}
+
+/* ---- Модальное окно добавления главы статистики ----- */
+.modal {
+  display: none; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+}
+
+.h2-modal {
+    margin-bottom: 16px;
+}
+
+.input-field-modal {
+    margin-bottom: 16px;
+}
+
+.modal-content {
+  background: #fff;
+  width: 500px;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 100px auto;
+  position: relative;
+}
+
+.close-btn {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 25px;
+    right: 10px;
+    top: 10px;
+    font-size: 20px;
+    cursor: pointer;
 }
