--- a/css/style-main-improved.css
+++ b/css/style-main-improved.css
@@ -1,8 +1,36 @@
 @import url(https://fonts.googleapis.com/css2?family=Lato&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Open+Sans&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
+
+@font-face {
+  font-family: 'Material Symbols Outlined';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block;
+  src: url('/resources/img/fonts/material-symbols-outlined-latin-400-normal.woff2') format('woff2');
+}
 
 /*! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com*/
+
+.material-symbols-outlined {
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+}
+
 *,
 :after,
 :before {
@@ -157,6 +185,7 @@ progress {
 summary {
     display: list-item;
 }
+
 blockquote,
 dd,
 dl,
